Update 공지사항 “해피빈-모금-간토대학살-100년-“옐로우-메모리”전에-함께해-주세요”

--- a/content/connect/notice/해피빈-모금-간토대학살-100년-“옐로우-메모리”전에-함께해-주세요.md
+++ b/content/connect/notice/해피빈-모금-간토대학살-100년-“옐로우-메모리”전에-함께해-주세요.md
@@ -4,7 +4,7 @@ author: 박물관
 date: 2023-07-21T05:07:10.932Z
 summary: "[해피빈 모금] 간토대학살 100년 “옐로우 메모리”전에 함께해 주세요. "
 image: /img/옐로우메모리포스터.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 <해피빈 기부> https://happybean.naver.com/donations/H000000190966
