--- a/content/connect/notice/기록물-열람·이용-안내.md
+++ b/content/connect/notice/기록물-열람·이용-안내.md
@@ -2,12 +2,10 @@
 title: 기록물 열람·이용 안내
 author: 아카이브팀
 date: 2023-01-17T05:07:06.871Z
-image: /img/제목을-입력해주세요_-002.jpg
+image: /img/기록물-열람이용안내-한글-001.jpg
 home_sticky: true
 pinned: true
 ---
-\*기록물이용 페이지에 첨부된 기존 신청서식은 접수 받지 않습니다. 아래 링크를 통해 새로운 신청서식으로 작성해주세요.
+\*메뉴 '기록물이용'에 첨부된 신청서식으로 접수 받지 않습니다. 아래 링크를 통해 새로운 신청서식으로 작성해주세요.
 
-
-
-\*신청서 링크: https://bit.ly/3GM1ngj
+\*신청서 링크: https://bit.ly/45U3l9v
