Update 공지사항 “기록물-열람·이용-안내”

--- a/content/connect/notice/기록물-열람·이용-안내.md
+++ b/content/connect/notice/기록물-열람·이용-안내.md
@@ -2,7 +2,7 @@
 title: 기록물 열람·이용 안내
 author: 아카이브팀
 date: 2023-01-17T05:07:06.871Z
-image: /img/기록물-열람이용안내-한글-001.jpg
+image: /img/기록물-열람이용안내-한글-001-1-.jpg
 home_sticky: true
 pinned: true
 ---
