Update 뮤지엄샵 “벽돌-마그넷”

--- a/content/guide/stores/벽돌-마그넷.md
+++ b/content/guide/stores/벽돌-마그넷.md
@@ -1,10 +1,13 @@
 ---
-title: 벽돌 마그넷
-price: 11,000
-buying_link: https://docs.google.com/forms/d/1pQ8iQwa1sJHtpYwh2Bbkl10CKyzVDzgQHMIDlbeduxY/edit#response=ACYDBNjXTRIC_TmzZuSN7K-KjvRNIHzzcsaEGsrbFG2l3hnrARoZjeMrp8l-cKAnynjSfcM
-summary: '박물관 벽돌에 새겨져 있는 할머니의 말씀 "나와 같은 아픔을 겪고 있는 여성들에게 희망이 되고 싶어요" 벽돌을 그대로
-  마그넷으로 제작했습니다. 영어, 일어로 된 것도 있습니다. '
-featured: /img/벽돌마그넷1.jpg
-components: /img/벽돌마그넷2.jpg
+title: 박물관티셔츠(2023)
+price: 22,000
+buying_link: https://docs.google.com/forms/d/1pQ8iQwa1sJHtpYwh2Bbkl10CKyzVDzgQHMIDlbeduxY/edit
+summary: 전쟁과여성인권 박물관을 형상화한 디자인으로 꾸며진 박물관 티셔츠..사이즈별로 있습니다.
+featured: /img/박물관-티셔츠.jpg
+components: /img/검은색.jpg
 ---
-박물관 벽돌에 새겨져 있는 할머니의 말씀 "나와 같은 아픔을 겪고 있는 여성들에게 희망이 되고 싶어요" 벽돌을 그대로 마그넷으로 제작했습니다. 한국어, 영어, 일어로  제작
+ .박물관티셔츠는 각 사이즈별로 있습니다
+
+사이즈는 다음과 같습니다﻿
+
+M   ﻿L   XL  XXL
