--- a/content/guide/stores/벽돌-마그넷.md
+++ b/content/guide/stores/벽돌-마그넷.md
@@ -2,12 +2,13 @@
 title: 박물관티셔츠(2023)
 price: 22,000
 buying_link: https://docs.google.com/forms/d/1pQ8iQwa1sJHtpYwh2Bbkl10CKyzVDzgQHMIDlbeduxY/edit
-summary: 전쟁과여성인권 박물관을 형상화한 디자인으로 꾸며진 박물관 티셔츠..사이즈별로 있습니다.
+summary: 전쟁과여성인권 박물관을 형상화한 디자인으로 꾸며진 박물관 티셔츠 사이즈별로 있습니다.
 featured: https://womenandwarmuseum.net/img/박물관-티셔츠.jpg
-components: 
-- https://womenandwarmuseum.net/img/검은색.jpg
+components:
+  - https://womenandwarmuseum.net/img/검은색.jpg
+  - /img/박물관-티셔츠.jpg
 ---
- .박물관티셔츠는 각 사이즈별로 있습니다
+ 박물관티셔츠는 각 사이즈별로 있습니다
 
 사이즈는 다음과 같습니다﻿
 
