--- a/content/connect/notice/2023년-하반기-자원활동가-2차-모집.md
+++ b/content/connect/notice/2023년-하반기-자원활동가-2차-모집.md
@@ -4,7 +4,7 @@ author: 박물관
 date: 2023-08-05T01:10:00.760Z
 summary: 전쟁과여성인권박물관에서 2023년 하반기 자원활동가를 모집합니다.
 image: /img/자원활동가신청안내.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 모집기간: 2023년 8월 1일(화)~9월9일(토)
