--- a/content/connect/notice/2023년-하반기-자원활동가-모집.md
+++ b/content/connect/notice/2023년-하반기-자원활동가-모집.md
@@ -4,7 +4,7 @@ author: 박물관
 date: 2023-05-27T05:09:30.805Z
 summary: 전쟁과여성인권박물관에서 2023년 하반기 자원활동가를 모집합니다.
 image: /img/전쟁과여성인권박물관-2023-하반기-자원활동가-모집-인스타-.jpg
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 전쟁과여성인권박물관에서 2023년 하반기 자원활동가를 모집합니다.
