Update 공지사항 “2022-정의기억연대-후원의-밤에-초대합니다”

--- a/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
+++ b/content/connect/notice/2022-정의기억연대-후원의-밤에-초대합니다.md
@@ -3,7 +3,7 @@ title: 2022 정의기억연대 후원의 밤에 초대합니다.
 author: 전쟁과여성인권박물관
 date: 2022-10-25T08:26:17.974Z
 image: ""
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
  **2022 정의기억연대 후원의 밤에 초대합니다.**
