--- a/content/connect/notice/2022-기부금-영수증-발급-안내.md
+++ b/content/connect/notice/2022-기부금-영수증-발급-안내.md
@@ -2,7 +2,7 @@
 title: 2022 기부금 영수증 발급 안내
 author: 관리자
 date: 2022-12-16T01:14:43.743Z
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 ![](/img/221215_기부금영수증발급-002.png)
