--- a/content/connect/notice/2022년-상반기-수입-지출-내역.md
+++ b/content/connect/notice/2022년-상반기-수입-지출-내역.md
@@ -2,7 +2,7 @@
 title: 2022년 상반기 수입 지출 내역
 author: 전쟁과여성인권박물관
 date: 2022-09-30T08:55:00.247Z
-home_sticky: true
+home_sticky: false
 pinned: false
 ---
 ![](/img/2022년-박물관-상반기-수입-지출내역.jpg)
