Update 뮤지엄샵 “14_브로치1 (1)r”

--- a/content/guide/stores/14_브로치1 (1)r.md
+++ b/content/guide/stores/14_브로치1 (1)r.md
@@ -1,22 +1,22 @@
 ---
-reference_code:
-media_type:
-title: 나비 배지(침형, 자석형)
-summary:
-image:
-description:
-modified_at:
-created_at:
+reference_code: null
+price: 침형(Pin) 3,000원, 자석형(Magnetic) 3,000원
+summary: null
+modified_at: null
+created_at: null
 featured: https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/14_브로치1%20(1)r.jpg
-price: 침형(Pin) 2,000원, 자석형(Magnetic) 2,000원
-buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
+media_type: null
+title: 나비 배지(침형, 자석형)
 components:
-- https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/14_브로치1%20(1)r.jpg
-- https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/14_브로치1%20(2)r.jpg
-- https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/15_브로치2%20(1)r.jpg
-- https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/15_브로치2%20(2)r.jpg
+  - https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/14_브로치1%20(1)r.jpg
+  - https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/14_브로치1%20(2)r.jpg
+  - https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/15_브로치2%20(1)r.jpg
+  - https://r2.womenandwarmuseum.net/stores/나비%20배지(침형,%20자석형)/15_브로치2%20(2)r.jpg
 tags:
--
+  - null
+image: null
+description: null
+buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 ---
 **나비뱃지／Butterfly Button／蝶バッチ**
 
