Update 뮤지엄샵 “IMGP7211”

--- a/content/guide/stores/IMGP7211.md
+++ b/content/guide/stores/IMGP7211.md
@@ -1,27 +1,27 @@
 ---
-reference_code:
-media_type:
-title: 함께 평화 열쇠고리
-summary:
-image:
-description:
-modified_at:
-created_at:
+reference_code: null
+price: 5,000원
+summary: null
+modified_at: null
+created_at: null
 featured: https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7211.JPG
-price: 
-buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
+media_type: null
+title: 함께 평화 열쇠고리
 components:
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7211.JPG
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7212.JPG
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7213.JPG
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7214.JPG
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/완성-02.png
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/착샷.png
-- https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/티셔츠_대지%201.png
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7211.JPG
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7212.JPG
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7213.JPG
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/IMGP7214.JPG
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/완성-02.png
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/착샷.png
+  - https://r2.womenandwarmuseum.net/stores/함께%20평화%20열쇠고리/티셔츠_대지%201.png
 tags:
--
+  - null
+image: null
+description: null
+buying_link: https://docs.google.com/forms/d/e/1FAIpQLSc9nedLjpcX4QsqHfsDClSUvnY_z8JjKZMrkfDJmnqozNUliA/viewform
 ---
-| 옵션 |\
+\| 옵션 |\
 제품 1. 큐빅형 열쇠고리\
 제품 2. 긴 열쇠고리
 
@@ -33,3 +33,7 @@ tags:
 \
 큐빅형 열쇠고리: 6.5cm(세로), 9.5cm(총 길이)\
 긴 열쇠고리 - 7cm(세로), 10cm(총 길이)
+
+
+
+: 가격 ﻿5,000원
