Update 공지사항 “2024년-전쟁과여성인권박물관-상반기-자원활동가-모집안내”

--- a/content/connect/notice/2024년-전쟁과여성인권박물관-상반기-자원활동가-모집안내.md
+++ b/content/connect/notice/2024년-전쟁과여성인권박물관-상반기-자원활동가-모집안내.md
@@ -4,8 +4,8 @@ author: 박물관
 date: 2023-12-02T02:55:21.343Z
 summary: 2024년 전쟁과여성인권박물관 상반기 자원활동가 모집을 안내합니다.
 image: /img/2024년-상반기-자원활동가-모집-공고_인스타용.jpg
-home_sticky: true
-pinned: true
+home_sticky: false
+pinned: false
 ---
 **2024년 전쟁과여성인권박물관 상반기 자원활동가 모집안내**
 
