Update 뮤지엄샵 “2023_박물관티셔츠”

--- a/content/guide/stores/2023_박물관티셔츠.md
+++ b/content/guide/stores/2023_박물관티셔츠.md
@@ -3,9 +3,8 @@ title: 박물관티셔츠(2023)
 price: 22,000
 buying_link: https://docs.google.com/forms/d/1pQ8iQwa1sJHtpYwh2Bbkl10CKyzVDzgQHMIDlbeduxY/edit
 summary: 전쟁과여성인권 박물관을 형상화한 디자인으로 꾸며진 박물관 티셔츠 사이즈별로 있습니다.
-featured: /img/photo_2024-02-20_14-31-10.jpg
-components:
-  - /img/photo_2024-02-20_14-31-12.jpg
+featured: ""
+components: ""
 ---
  박물관티셔츠는 각 사이즈별로 있습니다
 
